manifests/deployment.yml
apiVersion : apps/v1beta1
kind: Deployment
metadata:
  name: "akscluster"
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: "akscluster"
    spec:
      containers:
        - name: "akscluster"
          image: "mgronbaraksregistry.azurecr.io/akscluster"
          ports:
          - containerPort: 80
